# greenfield_fw

./: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  greenfield.csv  pytest_greenfield.py  sdkconfig  sdkconfig.old
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: Doxyfile
docs/html/: dir_5c982d53a68cdbcd421152b4020263a9.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8c.html  main_8c__incl.md5  navtreedata.js  navtreeindex0.js
main/: CMakeLists.txt  Kconfig.projbuild  atl_button.c  atl_button.h  atl_config.c  atl_config.h  atl_dns.c  atl_dns.h  atl_led.c  atl_led.h  atl_main.c  atl_mqtt.c  atl_mqtt.h  atl_ota.c  atl_ota.h  atl_storage.c  atl_storage.h  atl_webserver.c  atl_webserver.h  atl_wifi.c  atl_wifi.h  idf_component.yml  main.c
main/certs/: cacert.pem  mqtt_cert.pem  prvtkey.pem
main/website/: agrotechlab.css  agrotechlab.js  footer.html  header.html
