idf_component_register(
    SRCS
        "atl_main.c"
        "atl_led.c"
        "atl_button.c"
        "atl_storage.c"
        "atl_config.c"
        "atl_wifi.c"
        "atl_dns.c"
        "atl_webserver.c"
    INCLUDE_DIRS "."
    EMBED_FILES                         
        "website/favicon.ico"
        "website/agrotechlab.css"
        "website/agrotechlab.js"
        "website/header.html"
        "website/footer.html"        
    EMBED_TXTFILES
        "certs/cacert.pem"
        "certs/prvtkey.pem")